# htan-model

./: .gitmodules  README.md
.github/workflows/: model-test-and-deploy.yml
docs/: README.md  README.md.content
docs/model-desc/: htan-model-terms.yaml  htan-model.txt  htan-model.yaml  index.html
etl/: README.md  htan-model-notes.md  pyproject.toml
etl/src/htan_rdf_to_mdf/: __init__.py
model-desc/: htan-model-props.yaml  htan-model-terms.yaml
